Fixed few bugs on styling and alignment

--- a/sources/scss/components/buttons.scss
+++ b/sources/scss/components/buttons.scss
@@ -78,5 +78,8 @@ a{
           font-size: 20px;
         }
       }
+      .add-plan & {
+        width: calc(100% -24px);
+      }
     }
 }
